# camp-allocator

./: .gitignore  README.md  best_allocation_summary.csv  manual_allocation.py  preferences.md  preferences.txt  pyproject.toml  script.py  transport_allocation.py  utils.py
camp-computer/: .gitignore  best_allocation_detailed.csv  big_demo.py  bigger_demo.py  brute_force_transport.py  camp_allocation.py  hello.py  ilp_allocation_detailed.csv  ilp_allocation_summary.csv  manual.csv  manual_allocation.py  multi_run.py  preferences.txt  pyproject.toml  script.py  small_demo.py  transport_allocation.py  transport_allocation_results.csv  vehicle_allocation_detailed.csv  vehicle_allocation_summary.csv
camp-computer/data/: Car_Assignments.csv  Choices.csv  Programme.csv  campers.csv  cars.csv  people.csv  people_v3.csv
data/: Activities.csv  cars.csv  people.csv
